admission/ValidatingAdmissionPolicy/policies/share-process-namespace/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-share-process-namespace
  annotations:
    kubeapt.io/uuid: "a317749c-d7dc-4c9c-b549-ffad9806c111"
spec:
  shareProcessNamespace: true
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
